--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">더치할래</string>
+    <string name="app_name">dutchHallae</string>
     <string name="facebook_app_id">448522530146396</string>
     <string name="fb_login_protocol_scheme">fb448522530146396</string>
+
 </resources>
